compiler/fir/analysis-tests/testData/resolve/diagnostics/redundantModifier.kt
// RUN_PIPELINE_TILL: BACKEND
<!REDUNDANT_MODIFIER!>open<!> abstract class A
<!REDUNDANT_MODIFIER!>abstract<!> sealed class B
